grammar_to_ply/error_msgs.txt
../programs/c/data_structures/output_programs/errors/linkedlist_len_3_error.c:1:1: error: unknown type name 'Line'
Line no. 2 :  Unknown & found.
^
../programs/c/data_structures/output_programs/errors/linkedlist_len_3_error.c:1:8: error: expected ';' after top level declarator
Line no. 2 :  Unknown & found.
       ^
       ;
../programs/c/data_structures/output_programs/errors/linkedlist_len_3_error.c:2:17: error: unknown type name 'missing'
Line no. 3 :  ; missing
                ^
../programs/c/data_structures/output_programs/errors/linkedlist_len_3_error.c:3:5: error: expected ';' after top level declarator
Line no. 5 :  Unknown : found.
    ^
    ;
../programs/c/data_structures/output_programs/errors/linkedlist_len_3_error.c:9:17: error: unknown type name 'missing'
Line no. 9 :  ; missing
                ^
../programs/c/data_structures/output_programs/errors/linkedlist_len_3_error.c:10:5: error: expected ';' after top level declarator
Line no. 10 :  Unknown ( found.
    ^
    ;
6 errors generated.
